SVG sample added
Unfortunately no load SVG, only save SVG

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,5 +58,6 @@ add_subdirectory(webrequest)
 add_subdirectory(wizard)
 add_subdirectory(aui)
 add_subdirectory(artprov)
+add_subdirectory(svg)
 
 
